# ducksoup-research

./: README.md
deploy-ducksoup-main/: .gitignore  README.md
deploy-ducksoup-main/app/: .dockerignore  .gitignore  Dockerfile.ducksoup  appctl  docker-compose.override-example.bind-ports.yml  docker-compose.override-example.build-experiment.yml  docker-compose.override-example.gpu.yml  docker-compose.override-example.network-host.yml  docker-compose.yml  env.example
deploy-ducksoup-main/app/config/db/: init.sh
deploy-ducksoup-main/app/config/prometheus/: prometheus.yml
deploy-ducksoup-main/examples/: docker-compose.ds-from-source.yml  docker-compose.nvidia-smi.yml  docker-compose.override-gpu-example.yml
deploy-ducksoup-main/examples/docker/: Dockerfile.inspect  daemon.json
deploy-ducksoup-main/examples/logrotate/: ducksoup
deploy-ducksoup-main/examples/nginx/: ducksoup-host.com  ducksoup-host.com.certbot  ducksoup-host.dev
deploy-ducksoup-main/examples/node_exporter/: node_exporter.service
deploy-ducksoup-main/examples/otree/: Dockerfile  requirements.txt  settings.py
deploy-ducksoup-main/examples/otree/_static/global/: app.js  main.css
deploy-ducksoup-main/examples/otree/mirror/: DuckSoup.html  End.html  Introduction.html  __init__.py
deploy-ducksoup-main/examples/ssh/: config
deploy-ducksoup-main/tutorial/: server-configuration.md
ducksoup-frontend/: .gitignore  electron-builder.yml  package-lock.json  package.json  tsconfig.json
ducksoup-frontend/main/: main.ts  preload.ts
ducksoup-frontend/main/helpers/: create-window.ts
ducksoup-frontend/renderer/: next.config.ts  preload.d.ts
ducksoup-frontend/renderer/pages/: home.tsx
ducksoup-frontend/renderer/public/: ducksoup.js
ducksoup-frontend/renderer/styles/: globals.css
ducksoup-server/: .env  docker-compose.yml
mozza-main/: .gitignore  README.md  meson.build
mozza-main/.devcontainer/: devcontainer.json
mozza-main/controller/: meson.build  mozza_controller.cpp
mozza-main/data/in/: smile10.dfm  test.mkv
mozza-main/docker/: ArmDockerfile.build  Dockerfile.build  Dockerfile.code  Dockerfile.code.old  Dockerfile.cuda.build
mozza-main/gst-plugin-mozza/: gstmozza.cpp  gstmozza.h  meson.build
mozza-main/lib/: meson.build  mozza.cpp  mozza.h
mozza-main/lib/imgwarp/: imgwarp_mls.cpp  imgwarp_mls.h  meson.build
mozza-main/templater/: meson.build  mozza-templater.cpp
mozza-main/tutorials/: Use_mozza_in_local.md
